--- a/css/style.css
+++ b/css/style.css
@@ -61,13 +61,10 @@ h2 {
     text-align: justify;
 }
 
-/* .border{
-    background-color: #00a8e8;
-} */
 /* HEADER */
 header {
     width: 100vw;
-    max-height: 10vh;
+    max-height: 100%;
     grid-area: header;
     display: flex;
     flex-direction: row;
@@ -117,7 +114,7 @@ header nav a:hover {
 /* MAIN */
 
 main {
-    min-height: 80vh;
+    min-height: 80%;
     grid-area: main;
     display: grid;
     grid-template-areas:
@@ -146,7 +143,7 @@ article {
 
 footer {
     min-height: 10vh;
-    width: 100vw;
+    width: 100%;
     grid-area: footer;
     background-color: #00a8e8;
     bottom: 0;
@@ -262,7 +259,7 @@ h2 {
 .article-why img {
     height: auto;
     min-height: 200px;
-    width: 400px;
+    width: 60%;
     object-fit: inherit;
     border-radius: 5px;
     border: solid #2f4858 1px;
@@ -331,7 +328,7 @@ h2 {
     justify-content: center;
     align-items: center;
     margin: 0 5% 0 5%;
-    min-width: 400px;
+    min-width: 20%;
 }
 
 .voyages-card img {
@@ -412,4 +409,35 @@ select:hover {
 
 .bouton {
     max-width: 200px;
+}
+
+@media only screen and (max-width: 900px) {
+    header nav {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+}
+
+@media only screen and (max-width: 900px) {
+
+    .section-why1,
+    .section-why2,
+    .section-why3 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .section-voyages {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
