--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,8 @@ h2 {
 
 /* HEADER */
 header {
-    width: 100vw;
-    max-height: 100%;
+    width: 100%;
+    min-height: 10vh;
     grid-area: header;
     display: flex;
     flex-direction: row;
@@ -75,8 +75,7 @@ header {
 
 header img {
     border-radius: 100%;
-    width: 5vw;
-    min-width: 3vw;
+    width: 80px;
     height: auto;
 }
 
@@ -84,6 +83,11 @@ header nav {
     min-width: 34vw;
     padding-right: 1%;
     font-family: "Montserrat", sans-serif;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
 }
 
 header nav a {
@@ -114,18 +118,18 @@ header nav a:hover {
 /* MAIN */
 
 main {
-    min-height: 80%;
+    min-height: 80vh;
     grid-area: main;
     display: grid;
     grid-template-areas:
-        "suggest suggest article article article"
-        "suggest suggest article article article";
+        "article article article suggest suggest"
+        "article article article suggest suggest";
 }
 
 .suggest {
     grid-area: suggest;
     max-width: 6vw;
-    min-height: 80vh;
+    height: 100%;
     background-color: #00a8e8;
 }
 
@@ -163,6 +167,7 @@ footer div {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0 2% 0 0;
     padding: 0 1% 0 1%;
 }
 
@@ -186,7 +191,6 @@ a {
 /* ACCUEIL */
 
 .article-accueil {
-    /* position: relative; */
     height: 100%;
     width: 100%;
     display: flex;
@@ -195,6 +199,7 @@ a {
     justify-content: center;
     background-image: url(../medias/background.jpg);
     background-size: cover;
+    background-position: center;
 }
 
 .article-accueil h1,
@@ -290,14 +295,17 @@ h2 {
 }
 
 .article-about p {
-    margin: 0px 15px 0px 15px;
+    margin: 0 30% 2% 30%;
     padding: 0;
 }
-
+.article-about h1{
+    margin: 2%;
+}
 .article-about img {
-    width: auto;
-    height: 400px;
+    width: 50%;
+    height: 40%;
     object-fit: cover;
+    filter: grayscale(1);
 }
 
 .article-about h1 {
@@ -314,6 +322,9 @@ h2 {
     align-items: center;
 }
 
+.article-offer h1{
+    margin: 0 2% 0 2%;
+}
 .section-voyages {
     display: flex;
     flex-direction: row;
@@ -324,6 +335,7 @@ h2 {
 
 .voyages-card {
     display: flex;
+    flex-wrap: nowrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -332,13 +344,15 @@ h2 {
 }
 
 .voyages-card img {
-    width: 100%;
+    max-width: 100%;
     height: 200px;
     border-radius: 10%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-
+    transition: 0.25s;
 }
-
+.voyages-card img:hover{
+    transform: scale(1.2);
+}
 .separateur {
     width: 75%;
     margin-top: 5%;
@@ -347,13 +361,20 @@ h2 {
 
 /* CONTACT */
 
+.article-contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 form {
     display: flex;
     flex-direction: column;
     gap: 2rem;
     text-align: left;
     align-items: center;
-
+    margin-bottom: 1%;
 }
 
 form input,
@@ -371,7 +392,7 @@ select {
     background: #2f4858;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, .1), -5px -5px 5px rgba(232, 228, 228, .1);
     transition: 0.25s;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 input:hover {
@@ -411,7 +432,7 @@ select:hover {
     max-width: 200px;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 600px) {
     header nav {
         display: flex;
         flex-direction: column;
@@ -419,9 +440,16 @@ select:hover {
         align-items: center;
     }
 
+    header{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 600px) {
 
     .section-why1,
     .section-why2,
@@ -433,7 +461,7 @@ select:hover {
     }
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 600px) {
     .section-voyages {
         display: flex;
         flex-direction: column;
