--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,11 @@ h2 {
     font-size: 2rem;
 }
 
+p {
+    font-size: 1.5rem;
+    margin: 2%;
+}
+
 .CTA {
     border-radius: 5px;
     background-color: #00a8e8;
@@ -42,6 +47,7 @@ h2 {
     color: #2f4858;
     padding: 7px;
     margin-top: 2%;
+    margin-bottom: 2%;
     transition: 0.15s;
 }
 
@@ -158,7 +164,7 @@ footer {
 }
 
 footer img {
-    max-width: 3vw;
+    width: 3vw;
     height: auto;
 }
 
@@ -205,7 +211,7 @@ a {
 .article-accueil h1,
 h2 {
     padding: 0;
-    margin: 0;
+    /* margin: 0; */
 }
 
 .CTA-accueil {
@@ -214,6 +220,7 @@ h2 {
     color: #2f4858;
     padding: 7px;
     margin-top: 2%;
+    margin-bottom: 2%;
     transition: 0.15s;
 }
 
@@ -254,12 +261,12 @@ h2 {
 }
 
 
-.section-why1,
+/* .section-why1,
 .section-why2,
 .section-why3 p {
     margin: 2%;
     font-size: 1.5rem;
-}
+} */
 
 .article-why img {
     height: auto;
@@ -298,9 +305,11 @@ h2 {
     margin: 0 30% 2% 30%;
     padding: 0;
 }
-.article-about h1{
+
+.article-about h1 {
     margin: 2%;
 }
+
 .article-about img {
     width: 50%;
     height: 40%;
@@ -322,9 +331,10 @@ h2 {
     align-items: center;
 }
 
-.article-offer h1{
+.article-offer h1 {
     margin: 0 2% 0 2%;
 }
+
 .section-voyages {
     display: flex;
     flex-direction: row;
@@ -344,15 +354,19 @@ h2 {
 }
 
 .voyages-card img {
-    max-width: 100%;
-    height: 200px;
+    width: 100%;
+    max-width: 350px;
+    height: 100%;
+    max-height: 250px;
     border-radius: 10%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     transition: 0.25s;
 }
-.voyages-card img:hover{
-    transform: scale(1.2);
+
+.voyages-card img:hover {
+    transform: scale(1.15);
 }
+
 .separateur {
     width: 75%;
     margin-top: 5%;
@@ -433,23 +447,21 @@ select:hover {
 }
 
 @media only screen and (max-width: 600px) {
+
     header nav {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        flex-wrap: nowrap;
     }
 
-    header{
+    header {
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
     }
-
-}
-
-@media only screen and (max-width: 600px) {
 
     .section-why1,
     .section-why2,
@@ -459,13 +471,70 @@ select:hover {
         justify-content: center;
         align-items: center;
     }
-}
 
-@media only screen and (max-width: 600px) {
     .section-voyages {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+    }
+
+    h1 {
+        font-size: 2rem;
+        margin-left: 2%;
+    }
+
+    h2 {
+        font-size: 1rem;
+        margin-left: 2%;
+    }
+
+    p {
+        font-size: 0.8rem;
+    }
+
+    .voyages-card img:hover {
+        transform: scale(1);
+    }
+
+    .CTA-accueil {
+        margin-bottom: 1%;
+    }
+
+    .CTA-accueil:hover {
+        border-radius: 10px;
+        cursor: pointer;
+        background-color: #ffd166;
+        padding: 7px;
+        transform: scale(1);
+    }
+
+    .CTA:hover {
+        border-radius: 10px;
+        cursor: pointer;
+        background-color: #ffd166;
+        padding: 7px;
+        transform: scale(1);
+    }
+
+    .CTA {
+        border-bottom: 1%;
+    }
+
+    .titre-offer {
+        margin-bottom: 2%;
+    }
+
+    nav {
+        margin-bottom: 1%;
+    }
+
+    .nav-active {
+        padding: 0.8%;
+    }
+
+    footer{
+        display: flex;
+        flex-direction: column;
     }
 }
